# Run-Rust-on-Mobile

./: .gitignore
android/Greetings/app/: build.gradle
android/Greetings/app/src/androidTest/java/omuomjugin/io/greetings/: ExampleInstrumentedTest.kt
android/Greetings/app/src/main/: AndroidManifest.xml
android/Greetings/app/src/main/java/omuomjugin/io/greetings/: MainActivity.kt  RustGreetings.kt
android/Greetings/app/src/main/res/layout/: activity_main.xml
android/Greetings/app/src/test/java/omuomjugin/io/greetings/: ExampleUnitTest.kt
android/Greetings/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml  build_android.sh  cargo-config.toml
cargo/src/: lib.rs
ios/Greeting/Greeting/: AppDelegate.swift  Greetings-Bridging-Header.h  ViewController.swift
ios/Greeting/Greeting.xcodeproj/: project.pbxproj
ios/Greeting/lib/: RustGreetings.swift
