[package]
name = "greetings"
version = "0.1.1"
authors = ["omuomugin <omu.omugin@gmail.com>"]
description = "Example static library project built for iOS"
edition = "2018"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib"]

[dependencies]

